Refactor and document ActivityRestService
