# docu/rest/swagger.json
@@ -144,6 +144,12 @@
                         "schema": {
                             "$ref": "#/definitions/EmailtaskList"
                         }
+                    },
+                    "404": {
+                        "description": "The scenario wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
@@ -183,7 +189,10 @@
                         }
                     },
                     "404": {
-                        "description": "There is no emailtask in the scenario with the given ids."
+                        "description": "There is no emailtask in the scenario with the given ids.",
+                        "schema": {
+                            "type": "object"
+                        }
                     }
                 }
             }
@@ -343,38 +352,6 @@
                         "schema": {
                             "$ref": "#/definitions/Error"
                         }
-                    }
-                }
-            },
-            "put": {
-                "description": "This post can be used to terminate an existing scenario instance.",
-                "operationId": "Update_terminateScenarioInstance_",
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "scenarioID",
-                        "in": "path",
-                        "required": true,
-                        "x-is-map": false,
-                        "type": "integer",
-                        "format": "int64",
-                        "description": "The Id of the scenario."
-                    },
-                    {
-                        "name": "instanceID",
-                        "in": "path",
-                        "required": true,
-                        "x-is-map": false,
-                        "type": "integer",
-                        "format": "int64",
-                        "description": "The Id of the instance to be terminated."
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success"
                     }
                 }
             }
@@ -567,12 +544,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "A list with all activity instances for the scenario instance.",
+                        "schema": {
+                            "$ref": "#/definitions/Activities"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario or instance wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
         },
-        "/scenario/{scenarioID}/instance/{instanceID}/activity/{activityID}": {
+        "/scenario/{scenarioID}/instance/{instanceID}/activityinstace/{activityID}": {
             "get": {
                 "description": "This method is used to get all the information for an activity.",
                 "operationId": "getActivity_",
@@ -610,7 +596,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "Information about the activity instance.",
+                        "schema": {
+                            "$ref": "#/definitions/Activity"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario / instance / activity wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             },
@@ -655,28 +650,36 @@
                         "x-is-map": false,
                         "description": "data input.",
                         "schema": {
-                            "$ref": "#/definitions/DataAttributeUpdateJaxBean"
+                            "$ref": "#/definitions/Input"
                         }
                     }
                 ],
                 "responses": {
                     "202": {
-                        "description": "Input was accepted.",
+                        "description": "Successfully updated attribute.",
                         "schema": {
                             "$ref": "#/definitions/Message"
                         }
                     },
                     "400": {
-                        "description": "Bad Request.",
+                        "description": "Couldn't update the attributes.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario / instance / activity wasn't found.",
                         "schema": {
                             "$ref": "#/definitions/Error"
                         }
                     }
                 }
-            },
+            }
+        },
+        "/scenario/{scenarioID}/instance/{instanceID}/activityinstace/{activityInstanceId}/begin": {
             "post": {
                 "description": "Updates the state of an activity instance.",
-                "operationId": "updateActivityState_",
+                "operationId": "Create_beginActivity_",
                 "produces": [
                     "application/json"
                 ],
@@ -697,45 +700,111 @@
                         "x-is-map": false,
                         "type": "integer",
                         "format": "int64",
-                        "description": "the id of an scenario instance."
+                        "description": "The id of an scenario instance."
                     },
                     {
-                        "name": "activityID",
+                        "name": "activityInstanceId",
                         "in": "path",
                         "required": true,
                         "x-is-map": false,
                         "type": "integer",
                         "format": "int64",
-                        "description": "the control node id of the activity."
+                        "description": "The id of the activity instance."
                     },
                     {
-                        "name": "state",
-                        "in": "query",
+                        "name": "postBody",
+                        "in": "body",
                         "required": true,
                         "x-is-map": false,
-                        "type": "string",
-                        "description": "the new state of the activity."
-                    },
-                    {
-                        "name": "outputset",
-                        "in": "query",
-                        "required": true,
-                        "x-is-map": false,
-                        "default": -1,
-                        "type": "integer",
-                        "format": "int64",
-                        "description": "the outputset of the activity."
+                        "description": "Information about the dataobjects for the activity.",
+                        "schema": {
+                            "$ref": "#/definitions/postBody"
+                        }
                     }
                 ],
                 "responses": {
                     "202": {
-                        "description": "Input was accepted.",
+                        "description": "Successfully started the activity.",
                         "schema": {
                             "$ref": "#/definitions/Message"
                         }
                     },
                     "400": {
-                        "description": "Bad Request.",
+                        "description": "Couldn't start the activity.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario / instance / activity wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/scenario/{scenarioID}/instance/{instanceID}/activityinstace/{activityInstanceId}/terminate": {
+            "post": {
+                "description": "Updates the state of an activity instance.",
+                "operationId": "Create_terminateActivity_",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "scenarioID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The id of a scenario model."
+                    },
+                    {
+                        "name": "instanceID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The id of an scenario instance."
+                    },
+                    {
+                        "name": "activityInstanceId",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The id of the activity instance."
+                    },
+                    {
+                        "name": "postBody",
+                        "in": "body",
+                        "required": true,
+                        "x-is-map": false,
+                        "description": "Information about the dataobjects for the activity.",
+                        "schema": {
+                            "$ref": "#/definitions/postBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Successfully terminated the activity.",
+                        "schema": {
+                            "$ref": "#/definitions/Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Couldn't terminate the activity.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario / instance / activity wasn't found.",
                         "schema": {
                             "$ref": "#/definitions/Error"
                         }
@@ -936,6 +1005,58 @@
                 }
             }
         },
+        "/scenario/{scenarioID}/instance/{instanceID}/activityinstance/{activityInstanceId}/workingItems": {
+            "get": {
+                "description": "This method provides a list of working items for an activity instance.",
+                "operationId": "getWorkingItems_",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "scenarioID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The databaseID of a scenario."
+                    },
+                    {
+                        "name": "instanceID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The databaseID of a scenarioInstance."
+                    },
+                    {
+                        "name": "activityInstanceId",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The databaseID of an activityInstance."
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "A list of working items",
+                        "schema": {
+                            "$ref": "#/definitions/WorkingItems"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario/scenarioInstance/activityInstance was not found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
         "/scenario/{scenarioID}/instance/{instanceID}/dataobject": {
             "get": {
                 "description": "Returns a JSON-Object, which contains information about all\n data objects of a specified scenario instance.",
@@ -976,6 +1097,12 @@
                         "description": "List of all data objects.",
                         "schema": {
                             "$ref": "#/definitions/DataObjectList"
+                        }
+                    },
+                    "404": {
+                        "description": "There is no scenario / instance for the given ids.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
                         }
                     }
                 }
@@ -1235,16 +1362,13 @@
                 }
             }
         },
-        "DataAttributeUpdateJaxBean": {
-            "title": "DataAttributeUpdateJaxBean",
+        "Input": {
             "type": "object",
+            "description": "New values for the DataAttributes",
             "properties": {
-                "id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "value": {
-                    "type": "string"
+                "(DataAttribute)": {
+                    "type": "string",
+                    "description": "new value for the specific DataAttribute"
                 }
             }
         },
@@ -1646,6 +1770,130 @@
                 "state": {
                     "type": "string",
                     "description": "The state of the data object."
+                }
+            }
+        },
+        "Activities": {
+            "type": "object",
+            "properties": {
+                "activities": {
+                    "$ref": "#/definitions/ActivityList"
+                },
+                "ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    },
+                    "description": "List of all activity ids"
+                }
+            }
+        },
+        "ActivityList": {
+            "type": "object",
+            "description": "Details for all activites",
+            "properties": {
+                "(id)": {
+                    "type": "object",
+                    "properties": {
+                        "activityid": {
+                            "type": "number",
+                            "format": "integer"
+                        },
+                        "link": {
+                            "type": "string"
+                        },
+                        "id": {
+                            "type": "number",
+                            "format": "integer"
+                        },
+                        "label": {
+                            "type": "string"
+                        },
+                        "state": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "Activity": {
+            "type": "object",
+            "description": "Details for an activity",
+            "properties": {
+                "id": {
+                    "type": "number",
+                    "format": "integer"
+                },
+                "inputSetLink": {
+                    "type": "string"
+                },
+                "outputSetLink": {
+                    "type": "string"
+                },
+                "label": {
+                    "type": "string",
+                    "description": "Name of the activity (if existant)"
+                }
+            }
+        },
+        "WorkingItems": {
+            "type": "array",
+            "description": "List of working items",
+            "items": {
+                "$ref": "#/definitions/WorkingItem"
+            }
+        },
+        "WorkingItem": {
+            "type": "object",
+            "description": "Details for a working item",
+            "properties": {
+                "label": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "number",
+                    "format": "integer"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "attributeConfiguration": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/AttributeConfiguration"
+                    }
+                }
+            }
+        },
+        "AttributeConfiguration": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "number",
+                    "format": "integer"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "postBody": {
+            "type": "object",
+            "description": "Information about data objects.",
+            "properties": {
+                "dataobjects": {
+                    "type": "array",
+                    "description": "ids of the data objects",
+                    "items": {
+                        "type": "number",
+                        "format": "integer"
+                    }
                 }
             }
         },
